plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.rmaciak'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
	implementation group: 'com.eventstore', name: 'db-client-java', version: '3.0.1'

	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'

	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
}

compileJava {
	options.compilerArgs += ["-parameters", "--enable-preview"]
}

tasks.named('test') {
	useJUnitPlatform()
}
